--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -2,8 +2,8 @@
 /*	height: 700px;
 	width: 1500px; 
 	margin-left: -200px;*/ 
-	width: 100%;
-	height: 700px;	
+ 	background-repeat: no-repeat;
+    background-size: 100% 100%;	
 }
 .logo-l {
 	width: 100%;
@@ -22,21 +22,23 @@ header .dropdown-menu a {
 	color: white;
 }
 .carousel-inner .carousel-item img {
-	width: 10px;
-
+	width: 100%;
+	display: block;
 }
+
 .d-block {
 	margin-left: 350px;
 }
 header {
 	font-family: "BPG Banner SuperSquare Caps", sans-serif;
-
 }
 
 .teams img {
 	width: 400px;
 	margin-left: 150px;
 	margin-right: 150px;
+	/*background-repeat: no-repeat;*/
+    /*background-size: 100% 100%;		*/
 }
 .table {
 	background-color: white;
@@ -156,9 +158,15 @@ header {
 	to {top: 0px;}
 }
 
-@media only screen and (max-width: 1000px)   {
- .container {
- 	display: inline-flex;
- }
+@media only screen and (max-width: 600px)   {
+.carousel-inner .carousel-item  img-1 {
+	margin-left: 200px;
+}
+.carousel-inner .carousel-item img-2 {
+	margin-left: 100px;
+}
+.teams img {
+	margin-left: -150px;
+}
 }
 
