--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -24,6 +24,7 @@ header .dropdown-menu a {
 .carousel-inner .carousel-item img {
 	width: 100%;
 	display: block;
+	margin-bottom: 50px;
 }
 
 .d-block {
@@ -39,6 +40,12 @@ header {
 	margin-right: 150px;
 	/*background-repeat: no-repeat;*/
     /*background-size: 100% 100%;		*/
+}
+footer {
+	width: 100%;
+	height: 50px;
+	color: #d06e23;
+	background-color: #8080805c;
 }
 .table {
 	background-color: white;
