--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -21,14 +21,38 @@ header .dropdown-menu {
 header .dropdown-menu a {
 	color: white;
 }
-.carousel-inner .carousel-item img {
-	width: 100%;
-	display: block;
+.carousel-inner .carousel-item img {	
+	/*display: inline-block;*/
 	margin-bottom: 50px;
+	/*margin-left: 500px; */
+	width: 300px;
+}
+/*.carousel {
+	padding-top: 100px;
+	padding-bottom: 300px;
+}*/
+.new {
+	background-image: url(../img/car.jpg);
+ 	background-repeat: no-repeat;
+    background-size: 100%;
+    padding-top: 100px;
+	padding-bottom: 300px;	
+}
+.carousel-control-prev-icon {
+	background-color: #c54721;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+}
+.carousel-control-next-icon{
+	background-color: #c54721;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
 }
 
 .d-block {
-	margin-left: 350px;
+	margin-left: 25%;
 }
 header {
 	font-family: "BPG Banner SuperSquare Caps", sans-serif;
@@ -44,9 +68,14 @@ header {
 footer {
 	width: 100%;
 	height: 50px;
-	color: #d06e23;
-	background-color: #8080805c;
+	color: white;
+	background-color: #c54721;
 }
+footer p {
+	margin-left: 20px;
+	
+}
+
 .table {
 	background-color: white;
 }
@@ -124,8 +153,8 @@ footer {
 	margin-left: 55px;
 }
 .cnt {
-	width: 650px;
-	margin-left: 400px;
+	width: 50%;
+	margin-left: 25%;
 }
 .container-4 img {
 	width: 600px;
@@ -165,15 +194,33 @@ footer {
 	to {top: 0px;}
 }
 
-@media only screen and (max-width: 600px)   {
-.carousel-inner .carousel-item  img-1 {
-	margin-left: 200px;
+@media only screen and (max-width: 1000px)   {
+
+.carousel-control-prev-icon {
+	background-color: #c54721;
+	border-radius: 50%;
+	width: 55%;
+	height: 17%;
+	margin-bottom: 45px;
 }
-.carousel-inner .carousel-item img-2 {
-	margin-left: 100px;
+.carousel-control-next-icon{
+	background-color: #c54721;
+	border-radius: 50%;
+	width: 55%;
+	height: 17%;
+	margin-bottom: 45px;
 }
-.teams img {
-	margin-left: -150px;
+ .schedule .jms {
+	margin-left: -10%;
+}
+.cnt {
+	width: 5%;
+	/*margin-left: 10%;*/
+	margin-top: 5%;
+	margin-left: -2%;
+}
+.schedule h2 {
+	font-size: 100%; 
 }
 }
 
