--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -25,6 +25,9 @@ header .dropdown-menu {
 	background-color: #343a40;
 
 }
+.viewport {
+	min-height: calc(100vh - 143px);
+}
 header .dropdown-menu a {
 	color: white;
 }
