--- a/css/custom_style.css
+++ b/css/custom_style.css
@@ -29,7 +29,7 @@ header .dropdown-menu {
 	min-height: calc(100vh - 200px);
 }
 .viewport-2 {
-	min-height: calc(100vh - 100px;)
+	min-height: calc(100vh - 200px)
 }
 header .dropdown-menu a {
 	color: white;
